# linkura-story-indexer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  PLAN.md  RAG_IMPROVEMENTS.md  README.md  TASKS.md  glossary.json  pyproject.toml  story_order.yaml
.tmp/: story_order_profile.pstats  story_order_single.pstats
docs/: summary-reader-deploy.md
scripts/: export-production-summary-reader.ps1  export-production-summary-reader.sh  export-summary-reader.ps1  export-summary-reader.sh
src/linkura_story_indexer/: __init__.py  cli.py  database.py  lexical.py  summary_export.py
src/linkura_story_indexer/eval/: models.py
src/linkura_story_indexer/indexer/: chunker.py  extractor.py  manifest.py  parser.py  processor.py  source_store.py  summarizer.py
src/linkura_story_indexer/models/: __init__.py  state.py  story.py
src/linkura_story_indexer/prompts/: __init__.py  answer_raw_user.md  answer_system.md
src/linkura_story_indexer/query/: agent.py  analysis.py  engine.py  router.py  tools.py
story/102/～Shades of Stars～/: 第2話.md  第6話.md
story/103/第10話『ルリめぐ・ファンファーレ』/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
story/103/第11話『スクールアイドルクラブのために！（？）』/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
story/103/第12話『期待はおもい！』/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  ED1.md  ED2.md  幕間.md
story/103/第13話『追いついたよ』/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
story/103/第15話『夢を信じる物語』/: 1.md  (+6 more)
tests/: test_chunker.py  test_database.py  test_glossary_candidates.py  test_ingest_raw_scenes.py  test_ingestion_manifest.py  test_lexical.py  test_parser.py  test_prompts.py  test_query_agent.py  test_query_analysis.py  test_query_engine.py  test_query_router.py  test_query_tools.py  test_smoke.py  test_source_store.py  test_state_extractor.py  test_story_order.py  test_summary_export.py
web/summary-reader/: index.html
web/summary-reader-production/: index.html
(+347 files in other folders)
