[project]
name = "linkura-story-indexer"
version = "0.1.0"
description = "Scripts to index the LLLL story"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkura_story_indexer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "prek>=0.3.10",
    "pyrefly>=0.62.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
